--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="gcms_nadmin_app">GCMS\nADMIN-APP</string>
+    <string name="search_word">검색어를 입력하세요</string>
+    <string name="name">이름</string>
+    <string name="modify">수정</string>
+    <string name="put_name">이름을 입력하세요</string>
 </resources>
