--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="name">이름</string>
     <string name="modify">수정</string>
     <string name="put_name">이름을 입력하세요</string>
+    <string name="user_num">학번</string>
 </resources>
