--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="modify">수정</string>
     <string name="put_name">이름을 입력하세요</string>
     <string name="user_num">학번</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
