--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -25,6 +25,10 @@
     <string name="modify_student_info">학생정보 수정하기</string>
     <string name="modify_club_info">동아리정보 수정하기</string>
     <string name="input_search_word">검색어를 입력하세요</string>
-    <string name="go_main">메인으로</string>
+    <string name="go_back">뒤로가기</string>
     <string name="find_teacher">선생님 조회하기</string>
+    <string name="club_kick">퇴출</string>
+    <string name="move">이동</string>
+    <string name="choose">선택</string>
+    <string name="add">추가</string>
 </resources>
